i18n関連のワードを日本語リソースの固定文字列で置き換え

--- a/kintone-help-astro-poc/src/components/Hint.astro
+++ b/kintone-help-astro-poc/src/components/Hint.astro
@@ -5,7 +5,7 @@ import Wovn from "./Wovn.astro";
 <aside class="admonition hint">
   <div class="admonition-alt">
     <i class="fas fa-lightbulb" aria-hidden="true"></i>
-    <span class="admonition-alt-text"><Wovn>i18n__Title_tips</Wovn></span>
+    <span class="admonition-alt-text"><Wovn>ヒント</Wovn></span>
   </div>
   <div class="admonition-content"><slot /></div>
 </aside>
