--- a/kintone-help-astro-poc/src/components/Note.astro
+++ b/kintone-help-astro-poc/src/components/Note.astro
@@ -5,7 +5,7 @@ import Wovn from "./Wovn.astro";
 <aside class="admonition note">
   <div class="admonition-alt">
     <i class="fas fa-pencil-alt" aria-hidden="true"></i>
-    <span><Wovn>i18n__Title_note</Wovn></span>
+    <span><Wovn>補足</Wovn></span>
   </div>
   <div class="admonition-content"><slot /></div>
 </aside>
