--- a/kintone-help-astro-poc/src/components/Reference.astro
+++ b/kintone-help-astro-poc/src/components/Reference.astro
@@ -5,7 +5,7 @@ import Wovn from "./Wovn.astro";
 <aside class="admonition reference">
   <div class="admonition-alt">
     <i class="fas fa-info-circle fa-fw" aria-hidden="true"></i>
-    <span><Wovn>i18n__Title_references</Wovn></span>
+    <span><Wovn>関連ページ</Wovn></span>
   </div>
   <div class="admonition-content"><slot /></div>
 </aside>
