--- a/kintone-help-astro-poc/src/layouts/PageLayout.astro
+++ b/kintone-help-astro-poc/src/layouts/PageLayout.astro
@@ -104,7 +104,7 @@ const isDisabled = currentPage.frontmatter.disabled.includes(env.targetRegion);
 
             <div class="sidebar-wrap">
               <nav id="rightside-bar">
-                <h2 class="toc-title">i18n__todo__In_this_article</h2>
+                <h2 class="toc-title">この記事の内容</h2>
               </nav>
             </div>
           </div>
