--- a/kintone-help-astro-poc/src/layouts/SectionLayout.astro
+++ b/kintone-help-astro-poc/src/layouts/SectionLayout.astro
@@ -109,7 +109,7 @@ const visibleChildPages = sortedChildPages.filter(page =>
                 {visibleChildPages.length > 0 && (
                   <nav class="section-pagelist">
                     <div class="section-pagelist-heading">
-                      <Wovn>i18n__Articles_in_this_category</Wovn>
+                      <Wovn>このカテゴリーの記事</Wovn>
                     </div>
                     <ul>
                       {visibleChildPages.map((childPage) => (
@@ -130,7 +130,7 @@ const visibleChildPages = sortedChildPages.filter(page =>
             <div class="sidebar-wrap">
               <nav id="rightside-bar">
                 <h2 class="toc-title">
-                  <Wovn>i18n__In_this_article</Wovn>
+                  <Wovn>この記事の内容</Wovn>
                 </h2>
               </nav>
             </div>
