--- a/kintone-help-astro-poc/src/layouts/components/AnchorLink.astro
+++ b/kintone-help-astro-poc/src/layouts/components/AnchorLink.astro
@@ -33,7 +33,7 @@ const safeHTML = (html: string) => html;
         aria-expanded="false"
       >
         <span>
-          <Wovn>i18n__Permalink</Wovn>
+          <Wovn>固定リンク</Wovn>
         </span>
         <i class="fas fa-link" aria-hidden="true" />
       </button>
