--- a/kintone-help-astro-poc/src/layouts/components/AnchorLink2.astro
+++ b/kintone-help-astro-poc/src/layouts/components/AnchorLink2.astro
@@ -90,7 +90,7 @@ const safeHTML = (html: string) => html;
     ids && (
       <button
         class="id-link-button"
-        title="i18n__todo__Copy_perma_link"
+        title="固定リンクをコピーします"
         data-idpath={al}
         tabindex="0"
         aria-owns={`message-${ti.Anchor}`}
@@ -101,5 +101,5 @@ const safeHTML = (html: string) => html;
   }
 </div>
 <div id={`message-${ti.Anchor}`} class="id-link-message">
-  <Wovn>i18n__Link_was_copied</Wovn>
+  <Wovn>固定リンクがコピーされました</Wovn>
 </div>
