--- a/kintone-help-astro-poc/src/layouts/components/ArticleLink.astro
+++ b/kintone-help-astro-poc/src/layouts/components/ArticleLink.astro
@@ -24,7 +24,7 @@ const alias = aliases[0] || "";
     <>
       <button
         class="id-link-button id-link-button-title"
-        title="i18n__todo__Copy_perma_link"
+        title="固定リンクをコピーします"
         data-idpath={alias}
         tabindex="0"
         aria-owns="message-aid"
@@ -32,7 +32,7 @@ const alias = aliases[0] || "";
         <i class="fas fa-link" aria-hidden="true" />
       </button>
       <div id="message-aid" class="id-link-message">
-        <Wovn>i18n__Link_was_copied</Wovn>
+        <Wovn>固定リンクがコピーされました</Wovn>
       </div>
     </>
   )
