--- a/kintone-help-astro-poc/src/layouts/components/ArticleNumber.astro
+++ b/kintone-help-astro-poc/src/layouts/components/ArticleNumber.astro
@@ -23,7 +23,7 @@ const docid = parts[parts.length - 1];
   docid && (
     <div class="id-bar">
       <div class="id-str">
-        <Wovn>i18n__Article_number</Wovn>:{docid}
+        <Wovn>記事番号</Wovn>:{docid}
       </div>
     </div>
   )
