--- a/kintone-help-astro-poc/src/layouts/components/Breadcrumb.astro
+++ b/kintone-help-astro-poc/src/layouts/components/Breadcrumb.astro
@@ -8,7 +8,7 @@ interface Props extends BaseProps {}
 const { page } = Astro.props;
 ---
 
-<nav class="breadcrumb" role="navigation" aria-label="i18n__todo__Bread_crumb">
+<nav class="breadcrumb" role="navigation" aria-label="パンくずリスト">
   <ul class="breadcrumbs">
     <BreadcrumbNav p1={page} p2={page} />
   </ul>
