--- a/kintone-help-astro-poc/src/layouts/components/Disclaimer.astro
+++ b/kintone-help-astro-poc/src/layouts/components/Disclaimer.astro
@@ -19,7 +19,7 @@ if (env.languageCode === "zh-cn" || env.languageCode === "zh-jp") {
   <div class="disclaimer">
     <a href={pdfUrl} target="_blank">
       <i class="fas fa-chevron-right" aria-hidden="true"></i>
-      <Wovn>i18n__MT_Disclaimer</Wovn>
+      <Wovn>機械翻訳についての免責事項</Wovn>
       <i class="far fa-file-pdf" aria-hidden="true"></i>
     </a>
   </div>
