--- a/kintone-help-astro-poc/src/layouts/components/Disclaimer3.astro
+++ b/kintone-help-astro-poc/src/layouts/components/Disclaimer3.astro
@@ -17,7 +17,7 @@ if (env.languageCode === "zh-cn" || env.languageCode === "zh-jp") {
 
 <li>
   <a href={pdfUrl} target="_blank">
-    <Wovn>i18n__MT_Disclaimer</Wovn>
+    <Wovn>機械翻訳についての免責事項</Wovn>
   </a>
   <i class="far fa-file-pdf index-pdf" aria-hidden="true"></i>
 </li>
