--- a/kintone-help-astro-poc/src/layouts/components/Enquete.astro
+++ b/kintone-help-astro-poc/src/layouts/components/Enquete.astro
@@ -17,11 +17,11 @@ const scriptUrl = `javascripts/enquete.js?${buildnum}`;
       <aside id="enquete">
         <div class="enquete-panel">
           <div>
-            <Wovn>i18n__Was_it_helpful</Wovn>
+            <Wovn>この情報は役に立ちましたか？</Wovn>
             <button
               class="close-enquete"
               id="close-enquete"
-              title="i18n__todo__Close"
+              title="閉じる"
             >
               <i class="far fa-window-close" />
             </button>
@@ -30,16 +30,16 @@ const scriptUrl = `javascripts/enquete.js?${buildnum}`;
             <button
               class="enquete-btn"
               id="feedback-yes"
-              aria-label="i18n__todo__Yes"
+              aria-label="はい"
             >
-              <Wovn>i18n__Yes</Wovn>
+              <Wovn>はい</Wovn>
             </button>
             <button
               class="enquete-btn"
               id="feedback-no"
-              aria-label="i18n__todo__No"
+              aria-label="いいえ"
             >
-              <Wovn>i18n__No</Wovn>
+              <Wovn>いいえ</Wovn>
             </button>
           </div>
         </div>
