--- a/kintone-help-astro-poc/src/layouts/components/Footer2Disclaimer.astro
+++ b/kintone-help-astro-poc/src/layouts/components/Footer2Disclaimer.astro
@@ -17,7 +17,7 @@ if (languageCode === "zh-cn" || languageCode === "zh-jp") {
 
 <li class="footer-mega-list-item">
   <a href={pdfUrl} target="_blank">
-    <Wovn>i18n__MT_Disclaimer</Wovn>
+    <Wovn>機械翻訳についての免責事項</Wovn>
   </a>
   <i class="far fa-file-pdf index-pdf" aria-hidden="true"></i>
 </li>
