--- a/kintone-help-astro-poc/src/layouts/components/FooterGr6.astro
+++ b/kintone-help-astro-poc/src/layouts/components/FooterGr6.astro
@@ -129,7 +129,7 @@ const processedLegalMenu = legalMenu.map((item) => {
         }
       </ul>
       <div class="footer-legal-copyright">
-        <Wovn>i18n__Footer_copyright</Wovn>
+        <Wovn>記載された商品名、各製品名は各社の登録商標または商標です。 ©Cybozu</Wovn>
       </div>
     </div>
   </div>
