--- a/kintone-help-astro-poc/src/layouts/components/IdLink.astro
+++ b/kintone-help-astro-poc/src/layouts/components/IdLink.astro
@@ -33,7 +33,7 @@ const docurl = `${env.baseURL}${relpath}id/${docid}.html`;
       aria-owns="doc-id"
       aria-expanded="false"
     >
-      <span><Wovn>i18n__Permalink</Wovn></span>
+      <span><Wovn>固定リンク</Wovn></span>
       <i class="fas fa-link" aria-hidden="true"></i>
     </button>
     <div id="doc-id" class="heading-url" aria-hidden="true">
