--- a/kintone-help-astro-poc/src/layouts/components/MegaNav.astro
+++ b/kintone-help-astro-poc/src/layouts/components/MegaNav.astro
@@ -147,7 +147,7 @@ const panelcnt = generatedMenuItems.length;
 <nav
   class="mega-nav-bar"
   role="navigation"
-  aria-label="i18n__todo__Document_type"
+  aria-label="メニュー"
 >
   <ul class="g-nav" role="none"></ul>
   <div id="mega-nav" class="mega-nav">
@@ -158,7 +158,7 @@ const panelcnt = generatedMenuItems.length;
           <button
             id="mega-tab-switch"
             class="mega-tab-switch"
-            aria-label="i18n__todo__Tab_menu"
+            aria-label="タブメニュー"
             aria-controls="mega-tab-bar"
             aria-expanded="false"
           >
