--- a/kintone-help-astro-poc/src/layouts/components/Related.astro
+++ b/kintone-help-astro-poc/src/layouts/components/Related.astro
@@ -35,7 +35,7 @@ const shouldDisplay = sortedPages.length > 0;
     <>
       <hr />
       <div class="seealso">
-        <Wovn>i18n__See_also</Wovn>
+        <Wovn>次のページも参照してください</Wovn>
       </div>
       <ul>
         {sortedPages.map((relatedPage) => (
