--- a/kintone-help-astro-poc/src/layouts/components/SupportInquiry.astro
+++ b/kintone-help-astro-poc/src/layouts/components/SupportInquiry.astro
@@ -9,7 +9,7 @@ import Wovn from "@/components/Wovn.astro";
       id="inquiry-btn"
     >
       <i class="fas fa-headset inquiry-icon"></i>
-      <Wovn>i18n__Contact_support</Wovn>
+      <Wovn>サポート問い合わせ</Wovn>
     </button>
   </div>
   <!-- Start of HubSpot Embed Code -->
