--- a/kintone-help-astro-poc/src/components/Warning.astro
+++ b/kintone-help-astro-poc/src/components/Warning.astro
@@ -13,7 +13,7 @@ import Wovn from "./Wovn.astro";
 <aside class="admonition warning">
   <div class="admonition-alt">
     <i class="fas fa-exclamation-circle" aria-hidden="true"></i>
-    <span><Wovn>i18n__Title_caution</Wovn></span>
+    <span><Wovn>注意</Wovn></span>
   </div>
   <div class="admonition-content">
     <slot />
