--- a/kintone-help-astro-poc/src/layouts/components/AnnouncementBanner.astro
+++ b/kintone-help-astro-poc/src/layouts/components/AnnouncementBanner.astro
@@ -22,8 +22,8 @@ const defaultMessage: MessageData = {
   bgColor: "#f9aeb6",
   fontawesomeIcon: "fas fa-exclamation-triangle",
   iconColor: "#cd1b49",
-  title: "i18n__Unsupported_browser",
-  text: "i18n__Unsupported_message",
+  title: "非対応のWebブラウザです。",
+  text: "一部の機能が正常に動作しない場合があります。",
 };
 
 // 使用するメッセージを決定
@@ -60,11 +60,11 @@ const processMarkdown = (text: string) => {
           type="submit"
           id={`announcement-${message.key}`}
           class="announcement-banner-content-button-close"
-          title="i18n__todo__Announcement_button_close"
+          title="閉じる"
           tabindex="0"
         >
           <i class="fa fa-times-circle" aria-hidden="true"></i>
-          <span><Wovn>i18n__Close</Wovn></span>
+          <span><Wovn>閉じる</Wovn></span>
         </button>
       </div>
     </div>
