--- a/kintone-help-astro-poc/src/layouts/components/GoToTop.astro
+++ b/kintone-help-astro-poc/src/layouts/components/GoToTop.astro
@@ -6,7 +6,7 @@
   id="goto-top"
   class="fa-stack"
   aria-hidden="true"
-  title="i18n__todo__Go_back_to_top"
+  title="トップに戻る"
 >
   <i class="fas fa-circle fa-stack-2x"></i>
   <i class="fas fa-arrow-circle-up fa-stack-1x"></i>
