--- a/kintone-help-astro-poc/src/layouts/components/LocaleModal.astro
+++ b/kintone-help-astro-poc/src/layouts/components/LocaleModal.astro
@@ -6,15 +6,15 @@ import Wovn from "@/components/Wovn.astro";
   <div class="locale-modal-content" role="dialog" aria-modal="true">
     <div class="locale-modal-text">
       <div>
-        <Wovn>i18n__Locale_modal_message</Wovn>
+        <Wovn>このページは、日本国外のお客様向けです。<br>日本のお客様に適したページに移動しますか？</Wovn>
       </div>
     </div>
     <div class="locale-modal-button">
       <button type="button" class="locale-modal-button-yes">
-        <span><Wovn>i18n__Yes</Wovn></span>
+        <span><Wovn>はい</Wovn></span>
       </button>
       <button type="button" class="locale-modal-button-no">
-        <span><Wovn>i18n__No</Wovn></span>
+        <span><Wovn>いいえ</Wovn></span>
       </button>
     </div>
   </div>
