--- a/kintone-help-astro-poc/src/layouts/components/TreeNavToggle.astro
+++ b/kintone-help-astro-poc/src/layouts/components/TreeNavToggle.astro
@@ -6,14 +6,14 @@
   <button
     id="treenav-show"
     class="treenav-toggle-button"
-    title="i18n__todo__Side_navigation_show"
+    title="サイドナビゲーションを表示する"
   >
     <i class="fas fa-chevron-right" aria-hidden="true"></i>
   </button>
   <button
     id="treenav-hide"
     class="treenav-toggle-button"
-    title="i18n__todo__Side_navigation_hide"
+    title="サイドナビゲーションを表示しない"
   >
     <i class="fas fa-chevron-left" aria-hidden="true"></i>
   </button>
