アンケート用のJSのパスを修正

--- a/kintone-help-astro-poc/src/layouts/components/Enquete.astro
+++ b/kintone-help-astro-poc/src/layouts/components/Enquete.astro
@@ -8,7 +8,7 @@ const buildnum =
   new Date().getHours().toString().padStart(2, "0");
 
 // スクリプトURL（相対URL処理）
-const scriptUrl = `javascripts/enquete.js?${buildnum}`;
+const scriptUrl = `/k/javascripts/enquete.js?${buildnum}`;
 ---
 
 {
