--- a/kintone-help-astro-poc/src/layouts/components/MegaNav.astro
+++ b/kintone-help-astro-poc/src/layouts/components/MegaNav.astro
@@ -1,6 +1,6 @@
 ---
 import { env } from "@/lib/env";
-import { menuItems, type MenuItemData } from "../../pages/_data/menuitems";
+import { menuItems, type MenuItemData } from "../../pages/_data/menuItems";
 
 interface Props {
   lang: string;
